refla/static/css/todo.css
body {
    background-color: #f6f5f5;
    color: #4d4d4d;
    font-family: 'Open Sans';
    font-size: 15px;
    font-weight: 300;
    font-style: normal;
    font-variant: normal;
}

h1 {
    font-size: 2rem;
    font-weight: 700;
    line-height: 33px;
}

#todo-container {
    background-color: white;
    border: 1px solid #e5e4e4;
    width: 500px ;
    margin-left: auto;
    margin-right: auto;
    margin-top: 100px;
}

.header {
    padding-top: 24px;
    padding-bottom: 44px;
    text-align: center;
    border-bottom: 1px dashed #d5d3d3;
}

.todo-input {
    padding-left: 20px;
    padding-top: 2px;
    box-shadow: none;
}

.todo-input input {
    width: 300px;
    height: 35px;
    border: solid 1px #b7b6b6;
    border-radius: 5px;
    padding-left: 10px;
    padding-top: 0px;
    margin-right: 10px;
    font-size: 1rem;
    font-weight: 300;
}

.todo-input button {
    height: 38px;
    width: 138px;
    padding: 0px;
    border: solid 1px #b7b6b6;
    border-radius: 5px;
    font-size: 0.8rem;
    font-weight: 600;
    color: #646463;

    background: #ebeae9; /* Old browsers */
    background: -moz-linear-gradient(top, #ebeae9 50%, #dad9d8 51%); /* FF3.6+ */
    background: -webkit-gradient(linear, left top, left bottom, color-stop(50%,#ebeae9), color-stop(51%,#dad9d8)); /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(top, #ebeae9 50%,#dad9d8 51%); /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(top, #ebeae9 50%,#dad9d8 51%); /* Opera 11.10+ */
    background: -ms-linear-gradient(top, #ebeae9 50%,#dad9d8 51%); /* IE10+ */
    background: linear-gradient(to bottom, #ebeae9 50%,#dad9d8 51%); /* W3C */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ebeae9', endColorstr='#dad9d8',GradientType=0 ); /* IE6-9 */
}

.todo-list {
    list-style: none;
    padding-left: 0px;
}

.todo-item {
    padding: 20px;
}

.todo-item:nth-child(odd) {
    background-color: #f4f7fa
}

.todo-item span {
    margin-left: 15px;
}

.todo-item input[type=checkbox]:checked + span {
    color: #a9a9a9;
    text-decoration: line-through;
}

.footer {
    border-top: 1px dashed #d5d3d3;
    height: 60px;
    color: #a9a9a9;
}

.items-left {
    float: left;
    padding: 20px;
    font-size: 0.8rem;
}

.mark-complete {
    float: right;
    padding: 20px;
    font-size: 0.8rem;
    font-weight: 600;
    color: #488dc9;
    cursor: pointer;
}

